force-app/main/default/objects/Apttus_Config2__MilestoneAdjustmentItem__c/Apttus_Config2__MilestoneAdjustmentItem__c.object-meta.xml
<CustomObject>
    <description>Represents an adjustment to the price of a product/service</description>
    <label>Milestone Adjustment Item</label>
    <nameField>
        <displayFormat>MA-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>