force-app/main/default/objects/Apttus_Config2__MilestoneAdjustmentItem__c/fields/Apttus_Config2__AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentType__c</fullName>
    <description>The price adjustment type</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Amount</fullName>
            </value>
            <value>
                <fullName>Deduction Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>