force-app/main/default/objects/Apttus_Config2__MilestoneAdjustmentItem__c/fields/Apttus_Config2__MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MilestoneId__c</fullName>
    <description>ID of the associated milestone</description>
    <inlineHelpText>ID of the associated milestone</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>Apttus_Config2__Milestone2__c</referenceTo>
    <relationshipName>AdjustmentItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>